--- a/index.html
+++ b/index.html
@@ -553,7 +553,7 @@
                             Input Text
                         </div>
                         <div class='item' style='align-self: center; padding-left: 5px; width: 350px'>
-                            The second attack was fatal, and ended in Cook's death from <span style='font-style: italic;color: #ff4f4f'>tetanus.</span>
+                            Nor did the methods by which they were perpetrated greatly vary from those in times <span style='font-style: italic;color: #ff4f4f'>past.</span>
                         </div>
                     </div>
 
@@ -606,7 +606,7 @@
                             Input Text
                         </div>
                         <div class='item' style='align-self: center; padding-left: 5px; width: 350px'>
-                            After this came the charge of administering oil of vitriol, which failed, as has been <span style='font-style: italic;color: #ff4f4f'>described.</span>
+                            Weedon and Lecasser to twelve and six months respectively in Coldbath <span style='font-style: italic;color: #ff4f4f'>Fields.</span>
                         </div>
                     </div>
 
@@ -661,7 +661,7 @@
                             Input Text
                         </div>
                         <div class='item' style='align-self: center; padding-left: 5px; width: 350px'>
-                            The prisoners were in due course transferred to Newgate, to be put upon their trial at the Central Criminal <span style='font-style: italic;color: #ff4f4f'>Court.</span>
+                            The second attack was fatal, and ended in Cook's death from <span style='font-style: italic;color: #ff4f4f'>tetanus.</span>
                         </div>
                     </div>
 
@@ -714,7 +714,7 @@
                             Input Text
                         </div>
                         <div class='item' style='align-self: center; padding-left: 5px; width: 350px'>
-                            The books and journals he was to keep were minutely specified, and his constant presence in or near the jail was insisted <span style='font-style: italic;color: #ff4f4f'>upon.</span>
+                            After a few years of active exertion the Society was rewarded by fresh <span style='font-style: italic;color: #ff4f4f'>legislation.</span>
                         </div>
                     </div>
 
